Fix GitHub Actions workflow: update to v4 actions, focus on Windows only, add manual trigger

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,15 +3,15 @@ name: Build Windows
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   build-windows:
-    runs-on: windows-latest
+    runs-on: windows-2022 # Explicitly use windows-2022
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -30,3 +30,4 @@ jobs:
         with:
           name: windows-build
           path: release/
+          retention-days: 30
